updated top about section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Adhokshaja Madhwaraj</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -56,10 +56,10 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h1 class="responsive-headline">Adhokshaja Madhwaraj</h1>
+            <h3>
+               <span>Senior Software Developer @ Nasdaq</span>
+            </h3>
             <hr />
             <ul class="social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -84,49 +84,23 @@
    ================================================== -->
    <section id="about">
 
-      <div class="row">
+      <div class="row" style="padding-left: 5%; padding-right: 5%;">
+
+         <h2 class="subheading">ABOUT ME</h2>
 
          <div class="three columns">
-
             <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
-
          </div>
 
          <div class="nine columns main-col">
 
-            <h2>About Me</h2>
-
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p class="opening">  
+               I am currently working at Nasdaq as a <span class="about-span">Senior Software Developer</span>
+               <br>
+               I graduated this May, with a B. Tech in Computer Science from <span class="about-span">Indian Institute of Technology Dharwad</span> with <span class="about-span" style="font-size: larger;">3.87/4.0 GPA</span>
+               <br><br>
+               I am deeply interested and experienced in <span class="about-span">Machine Learning</span>, <span class="about-span">Reinforcement Learning</span> and <span class="about-span"> Adversarial Networks</span>. I have done relevant <a>projects</a> in areas of RL, NLP, Music analysis, and more. Also have a passion for minimalistic design patterns.
             </p>
-
-            <div class="row">
-
-               <div class="columns contact-details">
-
-                  <h2>Contact Details</h2>
-                  <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
-					   </p>
-
-               </div>
-
-               <div class="columns download">
-                  <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
-                  </p>
-               </div>
-
-            </div> <!-- end row -->
 
          </div> <!-- end .main-col -->
 
