--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="row education">
 
          <div class="three columns header-col">
-            <h1><span>Education</span></h1>
+            <h1><span>EDUCATION</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -127,16 +127,14 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Indian Institute of Technology Dharwad</h3>
+                  <p class="info">B. Tech Computer Science  Engineering <span>&bull;</span> <em class="date">May 2020</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                     <strong style="font-size: larger;">GPA of 3.87/4.0</strong> with a concentration on Data Analytics, Machine Learning and Artificial Intelligence.
+                     <br>
+                     Department Rank: 3, Institute Rank: 4
                   </p>
-
                </div>
 
             </div> <!-- item end -->
@@ -145,14 +143,13 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Central Board of Secondary Education</h3>
+                  <p class="info">12th Grade (Math and Science) <span>&bull;</span> <em class="date">May 2016</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                     <strong style="font-size: larger;">98% Karnataka State Rank: 1 of 200,000
+                     <br>
+                     All India Rank 7 of ~1.2 million </strong>
                   </p>
 
                </div>
