added skills and extra images

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1>PROFESSIONAL<span> EXPERIENCE</span></h1>
+            <h1><span>PROFESSIONAL EXPERIENCE</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -195,7 +195,8 @@
                <div class="twelve columns">
 
                   <h3>Freelancer - ML/AI and Business Applications</h3>
-                  <em class="date">Spring 2018 - Present</em>
+
+                  <p class="info">Bengaluru<span>&bull;</span> <em class="date">Spring 2018 - Present</em></p>
 
                   <p style="padding-left: 30px;">
                      &bull;&nbsp;&nbsp;Develop efficient Machine Learning algorithms for individuals and companies for academic & industrial use cases. Algorithms implemented:
@@ -238,8 +239,7 @@
                <div class="twelve columns">
 
                   <h3>Teaching Assistant</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">January 2017 - May 2017</em></p>
-
+                  <p class="info">Physics: Undergrad course <span>&bull;</span> <em class="date">January 2017 - May 2017</em></p>
                   <p>
                      Conducted Classes, Quizzes and Tutorial sessions and assisted Dr. CV Tomy, Dept. of Physics, IIT
                      Mumbai, in Electricity and Magnetism course.
@@ -265,24 +265,105 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
-            </p>
+            <div class="skills-div">
+               <span class="skill-heading">ML/AI & DATA</span>
+               <div class="skill-set-div">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/python.png">
+                     <span class="skill-tag">PYTHON</span>
+                  </div>
 
-				<div class="bars">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/numpy.png">
+                     <span class="skill-tag">NUMPY</span>
+                  </div>
 
-				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
-					</ul>
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/keras.png">
+                     <span class="skill-tag">KERAS</span>
+                  </div>
 
-				</div><!-- end skill-bars -->
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/tensorflow.png">
+                     <span class="skill-tag">TENSORFLOW</span>
+                  </div>
+               </div>
+            </div>
+
+            <div class="skills-div">
+               <span class="skill-heading">DEVELOPMENT</span>
+               <div class="skill-set-div">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/c++.png">
+                     <span class="skill-tag">C++</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/bash.png">
+                     <span class="skill-tag">BASH</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/java.png">
+                     <span class="skill-tag">JAVA</span>
+                  </div>
+               </div>
+            </div>
+
+            <div class="skills-div">
+               <span class="skill-heading">APP DEVELOPMENT</span>
+               <div class="skill-set-div">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/flutter.png">
+                     <span class="skill-tag">FLUTTER</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/dart.png">
+                     <span class="skill-tag">DART</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/swift.png">
+                     <span class="skill-tag">SWIFT</span>
+                  </div>
+               </div>
+            </div>
+
+            <div class="skills-div">
+               <span class="skill-heading">WEB TECHNOLOGIES</span>
+               <div class="skill-set-div">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/php.png">
+                     <span class="skill-tag">PHP</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/html.png">
+                     <span class="skill-tag">HTML-CSS-JS</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/drupal.png">
+                     <span class="skill-tag">DRUPAL</span>
+                  </div>
+               </div>
+            </div>
+
+            <div class="skills-div">
+               <span class="skill-heading">DESIGN</span>
+               <div class="skill-set-div">
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/xd.png">
+                     <span class="skill-tag">ADOBE XD</span>
+                  </div>
+
+                  <div class="individual-skill-div">
+                     <img class="skill-image" src="images/programming-icons/figma.png">
+                     <span class="skill-tag">FIGMA</span>
+                  </div>
+               </div>
+            </div>
 
 			</div> <!-- main-col end -->
 
