completed-thesis-hitsongs

--- a/project-template.html
+++ b/project-template.html
@@ -169,6 +169,30 @@
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
+
+                <h3>Row of Videos</h3>
+
+                <div class='video-row-container'>
+                    <div class='video-caption-div'>
+                        <video width=100% controls>
+                            <source src="initial.mp4">
+                        </video>
+                        <span>Before training</span>
+                    </div>
+                    <div class='video-caption-div'>
+                        <video controls>
+                            <source src="initial.mp4">
+                        </video>
+                        <span>Before training</span>
+                    </div>
+                    <div class='video-caption-div'>
+                        <video controls>
+                            <source src="initial.mp4">
+                        </video>
+                        <span>Before training</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
