completed all research projects

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/btp/cover-pic.png">
+                            <img alt="" src="projects/thesis/cover-pic.png">
                         </div>
 
                         <div class="info-container">
@@ -468,7 +468,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="/projects/thesis/">VIEW DETAILS</a>
                         </div>
 
 
@@ -476,7 +476,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/hit-songs/cover-pic.png">
+                            <img alt="" src="projects/hit-songs/cover-pic.png">
                         </div>
 
                         <div class="info-container">
@@ -514,7 +514,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="/projects/hit-songs/">VIEW DETAILS</a>
                         </div>
 
 
@@ -522,7 +522,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/rtos/cover-pic.png">
+                            <img alt="" src="projects/rtos/cover-pic.png">
                         </div>
 
                         <div class="info-container">
@@ -544,7 +544,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="/projects/rtos/">VIEW DETAILS</a>
                         </div>
 
 
@@ -552,7 +552,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/internet-usage/cover-pic.jpg">
+                            <img alt="" src="projects/internet-usage/cover-pic.jpg">
                         </div>
 
                         <div class="info-container">
@@ -583,7 +583,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="/projects/internet-usage/">VIEW DETAILS</a>
                         </div>
 
 
@@ -599,7 +599,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/snapseek/cover-pic.png">
+                            <img alt="" src="projects/snapseek/cover-pic.png">
                         </div>
 
                         <div class="info-container">
@@ -630,7 +630,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/marketsense/cover-pic.png">
+                            <img alt="" src="projects/marketsense/cover-pic.png">
                         </div>
 
                         <div class="info-container">
@@ -662,7 +662,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/video-conference/cover-pic.webp">
+                            <img alt="" src="projects/video-conference/cover-pic.webp">
                         </div>
 
                         <div class="info-container">
@@ -704,7 +704,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/reversi-bot/reversi.jpg">
+                            <img alt="" src="projects/reversi-bot/reversi.jpg">
                         </div>
 
                         <div class="info-container">
@@ -736,7 +736,7 @@
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
-                            <img alt="" src="assets/projects/vishaal-farm-fresh/cover-pic.png">
+                            <img alt="" src="projects/vishaal-farm-fresh/cover-pic.png">
                         </div>
 
                         <div class="info-container">
