--- a/projects/hit-songs/index.html
+++ b/projects/hit-songs/index.html
@@ -114,13 +114,13 @@
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
                         <img src="carousel-1.png" style="width:100%">
-                        <div class="caption-text">Data Preprocessing and Model</div>
+                        <div class="caption-text" style="color: #12232E;">Data Preprocessing and Model</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 3</div>
                         <img src="carousel-2.png" style="width:100%">
-                        <div class="caption-text">Performance Metrics</div>
+                        <div class="caption-text" style="color: #12232E;">Performance Metrics</div>
                     </div>
 
                     <!-- Next and previous buttons -->
