completed snapseek and othello pages

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="/projects/snapseek/">VIEW DETAILS</a>
                         </div>
 
 
@@ -654,7 +654,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta" href="https://www.google.com">VIEW DETAILS</a>
+                            <a class="cta" href="projects/marketsense/">VIEW DETAILS</a>
                         </div>
 
 
@@ -695,12 +695,11 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta">VIEW DETAILS</a>
+                            <a class="cta" href="projects/video-conference/">VIEW DETAILS</a>
                         </div>
 
 
                     </div> <!-- item end -->
-
 
                     <div class="columns portfolio-container">
                         <div class=image-container>
@@ -728,7 +727,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta">VIEW DETAILS</a>
+                            <a class="cta" href="projects/reversi-bot/">VIEW DETAILS</a>
                         </div>
 
 
@@ -766,7 +765,7 @@
                         </div>
 
                         <div class="cta-container">
-                            <a class="cta">VIEW DETAILS</a>
+                            <a class="cta" href="projects/vishaal-farm-fresh/">VIEW DETAILS</a>
                         </div>
 
 
